bot.fix connection 2